--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <p>You will be automatically redirected in <span id="countdown">3</span> seconds.</p>
             <div class="spinner"></div>
             <button id="redirect-now" class="redirect-btn">Redirect Now</button>
-            <p class="destination">Destination: <span id="destination-url">https://www.google.com</span></p>
+            <p class="destination">Destination: <span id="destination-url">destination.html</span></p>
         </div>
     </div>
 
